# snow

./: .gitignore  CODEOWNERS  MANUAL_TRIAGE.md  README.md  TEST.md  checkpoint_out.py  comparison.py  config-example.cfg  config-test.cfg  config.cfg  control_to_json.py  enabled  error_handling.py  exceptions.py  fix-next.notes  forked-repos.json  generate_false_positives_files.py  get_new_findings.py  get_webapp.sh  hash_id.py  high_priority_cfg.json  json_results_to_csv.py  json_to_csv.py  local-setup-github-actions.sh  local-setup-tinyspeck.sh  pre-install.sh  process_hash_ids.py  pyproject.toml  requirements-github.txt  requirements.txt  run_docker.py  run_semgrep.py  run_tests.py  semgrep-checkpoint-pr.sh  semgrep_config.sh  semgrep_go.sh  semgrep_golang.sh  semgrep_java.sh  semgrep_javascript.sh  semgrep_php.sh  (+4 more)
.github/workflows/: control_to_json.py  daily_scan.yaml  daily_scan_reusable.yaml  github_action.yaml  github_action_reusable.yaml  linter.yml  (+3 more)
aws/: upload_to_s3.py
ci/: github_action.yaml  jenkins.py  test-core-local.sh  test-core.sh  test-integration-local.sh  test-integration.sh  test-rules-local.sh  test-rules.sh
config/: logging.ini  message_text.py  prod.cfg  test.cfg
docs/: TEST.md
results/: results-golang-agenda.json
scripts/: add_hash_ids_and_compare.py  control_to_json.py  generate_false_positives_files.py  get_new_findings.py  json_results_to_csv.py  json_to_csv.py  lines.py
src/: aws_s3.py  checkpoint.py  comparison.py  config.py  db.py  exceptions.py  git.py  jenkins.py  repos.py  slack.py  util.py  verify.py  webhooks.py
(+282 files in other folders)
